--- a/index.html
+++ b/index.html
@@ -5,39 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Speak App</title>
+    <link rel="stylesheet" href="style.css">
     
-    <style>
-        textarea{
-            height: 10vh;
-            width: 85%;
-            display: block;
-            margin: 1rem;
-            padding: 1rem;
-        }
-
-        button{
-            margin-left: 1rem;
-            margin-right: 1rem;
-            margin-bottom: 1rem;
-        }
-        
-        #output{
-            border: 1px solid black;
-            height: 10vh;
-            width: 85%;
-            display: block;
-            margin: 1rem;
-            padding: 1rem;
-        }
-    </style>
 </head>
 <body>
-    <h1>Banana App</h1>
-    <textarea name="" id="txt-input" placeholder="Put your sentence in English here we will convert it into banana "></textarea>
-    <button id="btn-translate">Translate</button>
-    <div style="font-size: larger; margin-left: 1rem;">Output will come here 👇</div>
-    <div id="output"></div>
-
+    <nav>
+        <div class="main"></div>
+            <h1><b>Banana App</b> </h1>
+            <div class="top_img">
+                <img src="minion1-removebg.png" alt="">
+            </div>
+        </div>
+    </nav>
+    <main>
+        <textarea name="" id="txt-input" placeholder="Put your sentence in English here we will convert it into banana "></textarea>
+        <button class="btn" id="btn-translate">Translate To Banana</button>
+        <div style="font-size: larger;">Output will come here 👇</div>
+        <div id="output"></div>
+    </main>
+    <footer>
+        <h2>About</h2>
+        <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
+    </footer>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
