--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="main"></div>
             <h1><b>Banana App</b> </h1>
             <div class="top_img">
-                <img src="minion1-removebg.png" alt="">
+                <img src="minion.png" alt="minion_img">
             </div>
         </div>
     </nav>
